--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
   <title>Document</title>
 </head>
 <body>
+  
   <button id="rock">ROCK</button>
   <button id="paper">PAPER</button>
-  <button id="scissors">SCISSORS</button>   
+  <button id="scissors">SCISSORS</button>
+
+  <div id="scoreBoard">
+    <div id="roundAnnouncement"></div>
+    <div id="scoreTracker">
+      <div id="playerScore"></div>
+      <div id="computerScore"></div>
+    </div>
+  </div>  
+
 </body>
 </html>
