--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
   <title>Document</title>
 </head>
 <body>
-
-  <button id="rock">ROCK</button>
-  <button id="paper">PAPER</button>
-  <button id="scissors">SCISSORS</button>
-
+  <h1>Rock Paper Scissors</h1>
+  <div class="buttons">
+    <button id="rock">ROCK</button>
+    <button id="paper">PAPER</button>
+    <button id="scissors">SCISSORS</button>
+  </div>
   <div id="scoreBoard">
     <div id="roundAnnouncement"></div>
     <div id="scoreTracker">
