--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <h1>Rock Paper Scissors</h1>
   
   <div id="scoreBoard">
-    <div id="roundAnnouncement"></div>
+    <div id="roundAnnouncement">First to 5 points wins</div>
     <div id="scoreTracker">
-      <div id="playerScore"></div>
-      <div id="computerScore"></div>
+      <div id="playerScore">Player: 0</div>
+      <div id="computerScore">Computer: 0</div>
     </div>
   </div> 
   
