--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
   <h1>Rock Paper Scissors</h1>
   
-  <div id="scoreBoard">
-    <div id="roundAnnouncement">First to 5 points wins</div>
-    <div id="scoreTracker">
-      <div id="playerScore">Player: 0</div>
-      <div id="computerScore">Computer: 0</div>
+  <div id="scoreboard">
+    <div id="round-announcement">First to 5 points wins</div>
+    <div id="score-tracker">
+      <div id="player-score">Player: 0</div>
+      <div id="computer-score">Computer: 0</div>
     </div>
   </div> 
   
