Add game-end-board skeleton

--- a/index.html
+++ b/index.html
@@ -26,5 +26,9 @@
     <button id="scissors">SCISSORS</button>
   </div>
 
+  <div id="game-end-board">
+    <div id="game-end-message">HELLLOOOOOO</div>
+    <button id="play-again-button">PLAY AGAIN?</button>
+  </div>
 </body>
 </html>
