--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </div>
 
   <div id="game-end-board">
-    <div id="game-end-message">Hello</div>
+    <div id="game-end-message"></div>
     <button id="play-again-button">PLAY AGAIN?</button>
   </div>
 </body>
