--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
   <script src="script.js" defer></script>
-  <title>Document</title>
+  <title>Simple RPS</title>
 </head>
 <body>
   <h1>Rock Paper Scissors</h1>
